Fixed html,body overflow

--- a/app/assets/stylesheets/spree/frontend/all.scss
+++ b/app/assets/stylesheets/spree/frontend/all.scss
@@ -9,8 +9,11 @@
 */
 
 html, body {
-	height: 100%;
-	width: 100%;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 footer, .push {
